base/apps/ingresses/kafdrop.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafdrop-ingress
  namespace: kafdrop
spec:
  ingressClassName: nginx
  rules:
    - host: kafdrop.integration
      http:
        paths:
          - backend:
              service:
                name: kafdrop
                port:
                  number: 80
            path: /kafdrop/
            pathType: Prefix
